# dyse-framework

./: .gitignore  README.md
dish/: README.md  config.ini  pyproject.toml  setup.py
dish/dish/: model.py  simulator.py  visualization.py
dish/examples/: example_model_Tcell.xlsx
dish/gui/: MainWindow.py  MainWindow.ui  PlotWindow.py  PlotWindow.ui  config.ini  simulator_gui.py
dish_java/: README.md
dish_java/src/: .gitignore  Element.java  Rule.java  Simulator.java  Utility.java
dishsoap/: .gitignore  README.md  sim_ghdl.sh
dishsoap/poster-results/: bench-gene-expression-128.txt  bench-gene-expression-16.txt  bench-gene-expression-2.txt  bench-gene-expression-256.txt  bench-gene-expression-32768.txt  bench-gene-expression-4.txt  bench-gene-expression-512.txt  bench-gene-expression-64.txt  bench-gene-expression-dishsoap-1.txt  bench-gene-expression-dishsoap-1024.txt  bench-gene-expression-dishsoap-128.txt  bench-gene-expression-dishsoap-16.txt  bench-gene-expression-dishsoap-16384.txt  bench-gene-expression-dishsoap-2.txt  bench-gene-expression-dishsoap-2048.txt  bench-gene-expression-dishsoap-256.txt  bench-gene-expression-dishsoap-32.txt  bench-gene-expression-dishsoap-32768.txt  bench-gene-expression-dishsoap-4.txt  bench-gene-expression-dishsoap-4096.txt  bench-gene-expression-dishsoap-512.txt  bench-gene-expression-dishsoap-64.txt  (+19 more)
dishy/: .gitignore  Makefile  README.md  bench.sh  dish.c
doc/: ReadMe
hardware_code/: ModelSim Simulating and Lessons Learned.docx  Parser Readme.docx  README.md  parser.py  synth_sim.ys  yosys.sh
src/: ExecRules.java
(+171 files in other folders)
